Bug 14579 - DLZ plugin can give strange errors when missing sam.ldb
Summary: DLZ plugin can give strange errors when missing sam.ldb
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: DNS plugin (BIND DLZ) (show other bugs)
Version: 4.13.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-23 07:12 UTC by Andrew Bartlett
Modified: 2026-01-15 01:03 UTC (History)
2 users (show)

See Also:


Attachments
patch from master backported to 4.12 and 4.13 (1.61 KB, patch)
2020-12-11 10:09 UTC, Andrew Bartlett
asn: review+
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2020-11-23 07:12:18 UTC
The error 
 samba_dlz: Unable to get basedn for /var/lib/samba/private/dns/sam.ldb - NULL Base DN invalid for a base search.

is not very clear, and an empty sam.ldb will have been created.  We want to fail to open the non-existent DB instead.
Comment 1 Samba QA Contact 2020-11-26 08:17:15 UTC
This bug was referenced in samba master:

f226bea5de892e3dbda3c0737edf054399ec0104
d49e96bc45ea5e2d3364242dad36fe9094b7cc42
Comment 2 Andrew Bartlett 2020-12-11 10:09:24 UTC
Created attachment 16367 [details]
patch from master backported to 4.12 and 4.13
Comment 3 Andrew Bartlett 2020-12-28 17:34:47 UTC
Assigning to Karolin, but still missing reviews.  If someone could review these it would be awesome!
Comment 4 Karolin Seeger 2021-01-07 08:18:47 UTC
If someone would review this one today, it would be included in 4.12.11.
Comment 5 Karolin Seeger 2021-01-07 08:50:49 UTC
Pushed to autobuild-v4-{13,12}-test.
Comment 6 Samba QA Contact 2021-01-07 09:51:04 UTC
This bug was referenced in samba v4-12-test:

578c5805ac7c44a1dcb4e5a121f65bad95d188d5
Comment 7 Samba QA Contact 2021-01-07 10:51:02 UTC
This bug was referenced in samba v4-13-test:

fc15ff8951f791ba53f25b44c105093c1cdb9bac
Comment 8 Karolin Seeger 2021-01-07 11:44:53 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2021-01-14 08:34:10 UTC
This bug was referenced in samba v4-12-stable (Release samba-4.12.11):

578c5805ac7c44a1dcb4e5a121f65bad95d188d5
Comment 10 Samba QA Contact 2021-01-29 13:54:14 UTC
This bug was referenced in samba v4-13-stable (Release samba-4.13.4):

fc15ff8951f791ba53f25b44c105093c1cdb9bac